# SugarLibRetro

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml
SugarLibRetro/: CMakeLists.txt  SugarLibRetro.info  libretro.cpp  libretro.h
